[tool.poetry]
name = "nonebot-plugin-blive-danmaku"
version = "0.3.40"
description = "A danmaku plugin for Nonebot2"
authors = ["ricardo <thespirit@vip.qq.com>"]
documentation = "https://github.com/zangxx66/nonebot_plugin_blive_danmaku#readme"
license = "MIT"
homepage = "https://github.com/zangxx66/nonebot_plugin_blive_danmaku"
readme = "README.md"
keywords = ["nonebot", "nonebot2", "bilibili", "danmaku"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
nonebot2 = {extras = ["fastapi"], version = "^2.0.0"}
nonebot-adapter-onebot = "^2.2.2"
bilireq = "^0.2.6"
nonebot_plugin_apscheduler = "^0.2.0"
aiohttp = "3.7.4"
Brotli = "1.0.9"
Pillow = "^9.5.0"
Jinja2 = "^3.1.2"
tortoise-orm = {extras = ["asyncpg"], version = "^0.19.3"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
